[package]
name = "bloxroute-sdk"
description = "Bloxroute SDK that allows developers to interact with the bloXroute Cloud API and Gateway."
keywords = ["bloxroute", "bdn", "ethereum", "blockchain"]
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/hjawhar/bloxroute-sdk-rs"
license = "The Unlicense"
readme = "README.md"

[dependencies]
async-recursion = "1.1.1"
futures-util = "0.3.30"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }

[[example]]
name = "tokio"
path = "./examples/tokio/src/main.rs"
