[package]
name = "bloxroute-sdk"
description = "Bloxroute SDK that allows developers to interact with the bloXroute Cloud API and Gateway."
keywords = ["bloxroute", "bdn", "ethereum", "blockchain"]
version = "1.0.2"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/hjawhar/bloxroute-sdk-rs"
license = "Unlicense"
readme = "README.md"

[dependencies]
async-recursion = "1.1.1"
futures-util = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }

[[example]]
name = "evm"
path = "./examples/evm/src/main.rs"

[[example]]
name = "solana"
path = "./examples/solana/src/main.rs"
